--- a/res/layout/activity_main_list.xml
+++ b/res/layout/activity_main_list.xml
@@ -10,19 +10,18 @@
 
     <ListView
         android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:textSize="12sp"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true" >
-
-    </ListView>
+        android:layout_alignParentTop="true"
+         />
     
     <TextView
         android:id="@android:id/empty"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-<<<<<<< HEAD
         android:layout_alignParentTop="true" />
 
     <ProgressBar
@@ -31,9 +30,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
-=======
-        android:layout_alignParentTop="true"
-        android:text="@string/no_items" />
->>>>>>> d9f5f5eb1d70935f8de029271bc741f8740055de
 
 </RelativeLayout>
