--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_about"/>
+    <item
+        android:id="@+id/action_tweet"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_tweet"/>
 
 </menu>
