--- a/res/layout/activity_display_about.xml
+++ b/res/layout/activity_display_about.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +10,7 @@
     tools:context=".DisplayAboutActivity" >
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
@@ -24,5 +26,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/participants" />
+
+<fragment
+  		android:id="@+id/map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_above="@+id/textView2"
+        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/textView1"
+  		class="com.google.android.gms.maps.SupportMapFragment"/>
 
 </RelativeLayout>
