--- a/res/layout/activity_display_about.xml
+++ b/res/layout/activity_display_about.xml
@@ -1,41 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DisplayAboutActivity" >
 
-    <TextView
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+ <TextView
         android:id="@+id/textView2"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="29dp"
+        android:layout_alignParentBottom ="true"
+        android:layout_marginBottom="10dp"
+		android:layout_marginLeft="5dp"
+		android:layout_marginRight="5dp"
+		android:gravity="center"
         android:text="@string/about" />
+
 
     <TextView
         android:id="@+id/textView1"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+		android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+		android:layout_marginRight="5dp"
+		android:gravity="center"
         android:text="@string/participants" />
 
-<fragment
-  		android:id="@+id/map"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_above="@+id/textView2"
+        android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
-        android:layout_alignLeft="@+id/textView1"
-  		class="com.google.android.gms.maps.SupportMapFragment"/>
+        android:layout_above="@+id/textView2"
+		android:layout_margin = "5dp"
+        android:layout_weight="10" />
+
+    <Button
+        android:id="@+id/button1"
+        style="?android:attr/buttonStyleSmall"
+        android:onClick="toHybrid"
+        android:layout_width="65dp"
+        android:layout_height="40dp"
+        android:layout_alignTop="@+id/map"
+        android:layout_toLeftOf="@+id/button2"
+        android:text="Hybrid"
+        android:textSize="10dp" />
+
+    <Button
+        android:id="@+id/button2"
+        style="?android:attr/buttonStyleSmall"
+        android:onClick="toTerrain"
+        android:layout_width="65dp"
+        android:layout_height="40dp"
+        android:layout_alignTop="@+id/map"
+        android:layout_centerHorizontal="true"
+        android:text="Terrain"
+        android:textSize="10dp"/>
+
+    <Button
+        android:id="@+id/button3"
+        style="?android:attr/buttonStyleSmall"
+        android:onClick="toNone"
+        android:layout_width="65dp"
+        android:layout_height="40dp"
+        android:layout_alignTop="@+id/map"
+        android:layout_toRightOf="@+id/button2"
+        android:text="None"
+        android:textSize="10dp" />
 
 </RelativeLayout>
